--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -2,24 +2,18 @@ version: "3.3"
 services:
   db:
     image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_DATABASE: "hsn"
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: "niklod"
-      # You can use whatever password you like
-      MYSQL_PASSWORD: "testpassword"
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: "testpassword"
+      MYSQL_DATABASE: hsn
+      MYSQL_USER: docker
+      MYSQL_PASSWORD: docker
+      MYSQL_ROOT_PASSWORD: docker
     ports:
-      # <Port exposed> : < MySQL Port running inside container>
       - "3306:3306"
     expose:
-      # Opens port 3306 on the container
       - "3306"
-      # Where our data will be persisted
     volumes:
       - mysql:/var/lib/mysql
-# Names our volume
 volumes:
-  mysql:
+  mysql: {}
