--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   db:
-    image: mysql:8.0
+    image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
@@ -12,31 +12,29 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - mysql:/var/lib/mysql
+      - ./mysql-data:/var/lib/mysql
       - ./deployment/mysql/master/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
     networks:
       - backend
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    expose:
-      - "8080"
-    restart: unless-stopped
-    depends_on:
-      - db
-    environment:
-      DB_LOGIN: ${MYSQL_USER}
-      DB_PASSWORD: ${MYSQL_PASSWORD}
-      DB_NAME: ${MYSQL_DATABASE}
-      DB_HOST: db
-      DB_PORT: 3306
-      SESSION_SECRET_KEY: ${SESSION_SECRET_KEY}
-    networks:
-      - backend
-volumes:
-  mysql: {}
+  # app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8080:8080"
+  #   expose:
+  #     - "8080"
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - db
+  #   environment:
+  #     DB_LOGIN: ${MYSQL_USER}
+  #     DB_PASSWORD: ${MYSQL_PASSWORD}
+  #     DB_NAME: ${MYSQL_DATABASE}
+  #     DB_HOST: db
+  #     DB_PORT: 3306
+  #     SESSION_SECRET_KEY: ${SESSION_SECRET_KEY}
+  #   networks:
+  #     - backend
 networks:
   backend:
