--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: "3.3"
 services:
   db:
-    image: mysql:5.7
+    image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
@@ -13,28 +12,28 @@ services:
       - "3306:3306"
     volumes:
       - ./mysql-data:/var/lib/mysql
-      - ./deployment/mysql/master/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
+      - ./deployment/mysql/master/conf/mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
     networks:
       - backend
-  # app:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "8080:8080"
-  #   expose:
-  #     - "8080"
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - db
-  #   environment:
-  #     DB_LOGIN: ${MYSQL_USER}
-  #     DB_PASSWORD: ${MYSQL_PASSWORD}
-  #     DB_NAME: ${MYSQL_DATABASE}
-  #     DB_HOST: db
-  #     DB_PORT: 3306
-  #     SESSION_SECRET_KEY: ${SESSION_SECRET_KEY}
-  #   networks:
-  #     - backend
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    expose:
+      - "8080"
+    restart: unless-stopped
+    depends_on:
+      - db
+    environment:
+      DB_LOGIN: ${MYSQL_USER}
+      DB_PASSWORD: ${MYSQL_PASSWORD}
+      DB_NAME: ${MYSQL_DATABASE}
+      DB_HOST: db
+      DB_PORT: 3306
+      SESSION_SECRET_KEY: ${SESSION_SECRET_KEY}
+    networks:
+      - backend
 networks:
   backend:
