mysql cfg update

--- a/deployment/mysql/master/conf/my.cnf
+++ b/deployment/mysql/master/conf/my.cnf
@@ -26,11 +26,10 @@ datadir         = /var/lib/mysql
 secure-file-priv= NULL
 
 server-id = 1
-log-bin = mysql-bin
+log-bin = /var/log/mysql/mysql-bin.log
 binlog_format = row
 gtid-mode=ON
 enforce-gtid-consistency
-log-slave-updates
 
 # Custom config should go here
 !includedir /etc/mysql/conf.d/
