--- a/deployment/mysql/master/conf/mysqld.cnf
+++ b/deployment/mysql/master/conf/mysqld.cnf
@@ -71,11 +71,10 @@ log_error = /var/log/mysql/error.log
 # note: if you are setting up a replication slave, see README.Debian about
 #       other settings you may need to change.
 server-id		= 1
-log-bin			= mysql-bin
+log-bin			= log-slave-updates 
 binlog_format = ROW
 gtid-mode = ON
 enforce-gtid-consistency
-log-slave-updates
 max_binlog_size   = 500M
 # binlog_expire_logs_seconds	= 2592000
 # binlog_do_db		= include_database_name
