mysql cfg update

--- a/deployment/mysql/master/conf/my.cnf
+++ b/deployment/mysql/master/conf/my.cnf
@@ -30,5 +30,8 @@ binlog_format = row
 gtid-mode=ON
 enforce-gtid-consistency
 
+rpl_semi_sync_master_enabled=1
+rpl_semi_sync_master_timeout=10000 # 10 seconds
+
 # Custom config should go here
 !includedir /etc/mysql/conf.d/
