Fix docker env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,14 +26,23 @@ services:
       - "8080"
     restart: unless-stopped
     depends_on:
-      - db
+      - rabbitmq
     environment:
-      DB_LOGIN: ${MYSQL_USER}
-      DB_PASSWORD: ${MYSQL_PASSWORD}
-      DB_NAME: ${MYSQL_DATABASE}
-      DB_HOST: db
-      DB_PORT: 3306
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
       SESSION_SECRET_KEY: ${SESSION_SECRET_KEY}
+      RABBITMQ_HOST: ${RABBITMQ_HOST}
+      RABBITMQ_PORT: ${RABBITMQ_PORT}
+      RABBITMQ_USERNAME: ${RABBITMQ_USERNAME}
+      RABBITMQ_PASSWORD: ${RABBITMQ_PASSWORD}
+      RABBITMQ_COOKIE: ${RABBITMQ_COOKIE}
+      RABBITMQ_FEED_EXCHANGE_NAME: ${RABBITMQ_FEED_EXCHANGE_NAME}
+      RABBITMQ_FEED_QUEUE_NAME: ${RABBITMQ_FEED_QUEUE_NAME}
+      RABBITMQ_FEED_ROUTING_KEY: ${RABBITMQ_FEED_ROUTING_KEY}
+      RABBITMQ_FEED_RECEIVERS_COUNT: ${RABBITMQ_FEED_RECEIVERS_COUNT}
     networks:
       - backend
 networks:
