--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,35 @@
 version: "3.3"
 services:
-  db:
-    image: mysql:8.0
-    command: --default-authentication-plugin=mysql_native_password
+  # db:
+  #   image: mysql:8.0
+  #   command: --default-authentication-plugin=mysql_native_password
+  #   environment:
+  #     MYSQL_DATABASE: ${MYSQL_DATABASE}
+  #     MYSQL_USER: ${MYSQL_USER}
+  #     MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+  #     MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+  #   ports:
+  #     - "3306:3306"
+  #   volumes:
+  #     - ./.docker/mysql-data:/var/lib/mysql
+  #     - ./.docker/deployment/mysql/master/conf/mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
+  #     - ./.docker/deployment/mysql/master/conf/my.cnf:/etc/mysql/my.cnf
+  #   networks:
+  #     - backend
+  rabbitmq:
+    image: rabbitmq:3.8-management-alpine
     environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-    ports:
-      - "3306:3306"
+      RABBITMQ_ERLANG_COOKIE: ${RABBITMQ_COOKIE}
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USERNAME}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
     volumes:
-      - ./mysql-data:/var/lib/mysql
-      - ./deployment/mysql/master/conf/mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
-      - ./deployment/mysql/master/conf/my.cnf:/etc/mysql/my.cnf
+      - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
+      - ./deployment/rabbitmq/enabled_plugins:/etc/rabbitmq/enabled_plugins
+      - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
+      - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
+    ports:
+      - "5672:5672"
+      - "15672:15672"
     networks:
       - backend
   app:
