--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
 
   build-and-push:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     needs: [test, test-build]
 
     steps:
@@ -82,6 +83,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     needs: build-and-push
 
     steps:
